k8s/apps/prometheus/prometheus-basicauth.yaml
---
# Middleware Traefik para BasicAuth
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-auth
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: brioit-local
spec:
  basicAuth:
    secret: prometheus-basic-auth
    removeHeader: true
