k8s/apps/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: brioit-local
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: prometheus-prometheus-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prometheus.local.127.0.0.1.nip.io
      secretName: prometheus-tls
  rules:
    - host: prometheus.local.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
